Added two more gradients

--- a/css-playground.html
+++ b/css-playground.html
@@ -156,13 +156,14 @@
                                                         <br>
                                                         <span id="gradientBlackToBlueCSS">background:
                                                                 linear-gradient(#000000, #31338d);</span>
-                                                                <br>
+                                                        <br>
                                                         <button class="btn btn-outline-info btn-lg"
                                                                 onclick="copyTextFromElement('gradientBlackToBlueCSS', 'gradient1Label')"
                                                                 onmouseleave="mouseLeave('gradient1Label')">
-                                                                <label id="gradient1Label" style="display: inline;">Copy</label>
+                                                                <label id="gradient1Label"
+                                                                        style="display: inline;">Copy</label>
                                                         </button>
-                                                        
+
                                                 </div>
                                         </div>
                                         <div class="col-6">
@@ -171,17 +172,78 @@
                                                 <div class="subHeader">
                                                         CSS:
                                                         <br>
-                                                        <span id="gradientBlackToBlueOpacity-50">background: linear-gradient(#00000050, #31338d50);</span>
-                                                                <br>
+                                                        <span id="gradientBlackToBlueOpacity-50">background:
+                                                                linear-gradient(#00000050, #31338d50);</span>
+                                                        <br>
                                                         <button class="btn btn-outline-info btn-lg"
                                                                 onclick="copyTextFromElement('gradientBlackToBlueOpacity-50', 'gradient2Label')"
                                                                 onmouseleave="mouseLeave('gradient2Label')">
-                                                                <label id="gradient2Label" style="display: inline;">Copy</label>
+                                                                <label id="gradient2Label"
+                                                                        style="display: inline;">Copy</label>
                                                         </button>
-                                                        
+
                                                 </div>
                                         </div>
                                 </div>
+
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+
+
+                                <div class="row">
+                                        <div class="col-6">
+                                                White to Gold Gradient
+                                        </div>
+                                        <div class="col-6">
+                                                Black to Gold Gradient
+                                        </div>
+                                </div>
+
+                                <div class="row">
+                                        <div class="col-6">
+                                                <canvas class="gradientWhiteToGold"></canvas>
+
+                                                <div class="subHeader">
+                                                        CSS:
+                                                        <br>
+                                                        <span id="gradientWhiteToGoldCSS">
+                                                                background: linear-gradient(#ffffff, #d4af37);
+                                                        </span>
+                                                        <br>
+                                                        <button class="btn btn-outline-info btn-lg"
+                                                                onclick="copyTextFromElement('gradientWhiteToGoldCSS', 'gradient3Label')"
+                                                                onmouseleave="mouseLeave('gradient3Label')">
+                                                                <label id="gradient3Label"
+                                                                        style="display: inline;">Copy</label>
+                                                        </button>
+
+                                                </div>
+                                        </div>
+                                        <div class="col-6">
+                                                <canvas class="gradientBlackToGold"></canvas>
+
+                                                <div class="subHeader">
+                                                        CSS:
+                                                        <br>
+                                                        <span id="gradientBlackToGoldCSS">
+                                                                background: linear-gradient(#000000, #d4af37);
+                                                        </span>
+                                                        <br>
+                                                        <button class="btn btn-outline-info btn-lg"
+                                                                onclick="copyTextFromElement('gradientBlackToGoldCSS', 'gradient4Label')"
+                                                                onmouseleave="mouseLeave('gradient4Label')">
+                                                                <label id="gradient4Label"
+                                                                        style="display: inline;">Copy</label>
+                                                        </button>
+
+                                                </div>
+                                        </div>
+                                </div>
+
                                 <br>
                                 <br>
                                 <br>
@@ -194,19 +256,6 @@
                                 Read more about
                                 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/gradient/linear-gradient()"
                                         target="_blank">linear-gradient()</a>
-
-                                <br>
-                                <br>
-
-
-                                <div class="row">
-                                        <div class="col-6">
-                                                Untitled #2
-                                        </div>
-                                        <div class="col-6">
-                                                Untitled #3
-                                        </div>
-                                </div>
 
                         </div>
 
