Added RGB gradient

--- a/css-playground.html
+++ b/css-playground.html
@@ -139,6 +139,8 @@
 
                                 </div>
                                 <br>
+                                <div class="header">Static Gradients</div>
+                                <br>
                                 <div class="row">
                                         <div class="col-6">
                                                 Black To Blue Gradient
@@ -189,7 +191,6 @@
                                 <br>
                                 <br>
                                 <br>
-
 
                                 <div class="row">
                                         <div class="col-6">
@@ -247,6 +248,41 @@
                                 Read more about
                                 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/gradient/linear-gradient()"
                                         target="_blank">linear-gradient()</a>
+
+                                <br>
+                                <br>
+                                <hr>
+                                <br>
+                                <br>
+                                <div class="header">Dynamic Gradients</div>
+                                <br>
+                                
+                                <div class="row">
+                                        <div class="col-6">
+                                                RGB
+                                        </div>
+                                        <div class="col-6">
+
+                                        </div>
+                                </div>
+                                <div class="row">
+                                        <div class="col-6">
+                                                <canvas class="gradientRGB">
+
+                                                </canvas>
+
+                                                <div class="subHeader">
+                                                        Original code by:
+                                                        <br>
+                                                        <a href="https://codepen.io/nohoid/pen/kIfto" target="_blank">
+                                                                Milan Nohejl (nohoid)
+                                                        </a>
+                                                </div>
+                                        </div>
+                                        <div class="col-6">
+
+                                        </div>
+                                </div>
 
                         </div>
 
