--- a/Portal.html
+++ b/Portal.html
@@ -153,7 +153,7 @@
 
 <body>
         <nav class="navbar navbar-expand-lg navbar-custom">
-                <a class="navbar-brand" href="#">Saeed Badghaish</a>
+                <a class="navbar-brand" href="Index.html">Saeed Badghaish</a>
                 <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
