--- a/Portfolio/online-game-store.html
+++ b/Portfolio/online-game-store.html
@@ -22,7 +22,7 @@
 <body onload="redirectToHome()">
 
     <nav class="navbar navbar-expand-lg navbar-custom">
-        <a class="navbar-brand" href="Index.html">Saeed Badghaish</a>
+        <a class="navbar-brand" href="../Index.html">Saeed Badghaish</a>
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a id="HomeLink" class="nav-link" href="Index.html">Home
+                    <a id="HomeLink" class="nav-link" href="../Index.html">Home
                         <!--<span class="sr-only">(current)</span>-->
                     </a>
                 </li>
@@ -41,7 +41,7 @@
                         Portfolio </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="css-playground.html">
+                    <a class="nav-link" href="../css-playground.html">
                         CSS Playground </a>
                 </li>
 
