Added About & Resume sections

--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
                                 </li>
                                 <li class="nav-item">
                                         <a class="nav-link" href="css-playground.html">
-                                                 CSS Playground </a>
+                                                CSS Playground </a>
                                 </li>
 
 
@@ -133,29 +133,48 @@
 
                                 My name is Saeed Badghaish
                                 <br />
+                                <span class="subTitle">Full Stack Web Developer @ University of Jeddah
+                                </span>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <div class="section">
+                                <div class="header">About</div>
                                 <div class=subHeader>
-                                        I am a Full Stack Web Developer / Programmer
-                                </div>
-                                <br>
-                                <div class="hidden">
-                                        <span class="content">
-                                                I do Web Development (Programming & Design), and in my free time I do
-                                                Video
-                                                & Image Editing and also sometimes 3D Modeling.
-                                                <br>
-                                                <br>
+                                        I am a Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full Stack Web Development 
+                                        specialized in .NET C# Web Form Development. <br>
+                                        <span class="hidden">I'm working on MVC & .NET Core projects and learning Unity C# Game Development on my free time.
                                         </span>
-                                        <span class="subHeader">
-                                                Some of my work:
-                                        </span>
-
                                 </div>
+                        </div>
+                        <br>
+                        <hr>
+                        <br>
+                        <div class="section">
+                                <div class="header">Resume PDF</div>
+                                <div class=subHeader>
+                                        <a target="_blank" href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">View</a>
+                                </div>
+                        </div>
+                        <div class="hidden">
+                                <span class="content">
+                                        I do Web Development (Programming & Design), and in my free time I do
+                                        Video
+                                        & Image Editing and also sometimes 3D Modeling.
+                                        <br>
+                                        <br>
+                                </span>
+                                <span class="subHeader">
+                                        Some of my work:
+                                </span>
 
                         </div>
+
                         <div class="about container-fluid hidden">
                                 <div class="text-left">
                                         <span class="header">Skills</span>
-                                        <br/>
+                                        <br />
 
                                         <div class="subHeader">
                                                 <div class="oval">
