Cleaned some old code & tweaked class names

--- a/css-playground.html
+++ b/css-playground.html
@@ -53,8 +53,7 @@
                                         </a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link disabled" href="Portfolio.html"> <span
-                                                        class="glyphicon glyphicon-film"></span> Portfolio (coming
+                                        <a class="nav-link disabled" href="Portfolio.html"> Portfolio (coming
                                                 soon..) </a>
                                 </li>
                                 <li class="nav-item">
@@ -89,13 +88,13 @@
                                         <li class="nav-item">
                                                 <a class="nav-link" target="_blank"
                                                         href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/">
-                                                        <span class="glyphicon glyphicon-film"></span> LinkedIn </a>
+                                                        LinkedIn </a>
 
                                         </li>
                                         <li class="nav-item">
                                                 <a class="nav-link" target="_blank"
                                                         href="https://github.com/Saeedo1998">
-                                                        <span class="glyphicon glyphicon-film"></span> GitHub </a>
+                                                        GitHub </a>
 
                                         </li>
                                 </ul>
@@ -135,7 +134,7 @@
                                 <br>
                                 <hr>
                                 <br />
-                                <div class=subHeader>
+                                <div class=content>
 
                                 </div>
                                 <br>
@@ -153,7 +152,7 @@
                                         <div class="col-6">
                                                 <canvas class="gradientBlackToBlue"></canvas>
 
-                                                <div class="subHeader">
+                                                <div class="content">
                                                         CSS:
                                                         <br>
                                                         <span id="gradientBlackToBlueCSS">background:
@@ -171,7 +170,7 @@
                                         <div class="col-6">
                                                 <canvas class="gradientBlackToBlueOpacity-50"></canvas>
 
-                                                <div class="subHeader">
+                                                <div class="content">
                                                         CSS:
                                                         <br>
                                                         <span id="gradientBlackToBlueOpacity-50">background:
@@ -205,7 +204,7 @@
                                         <div class="col-6">
                                                 <canvas class="gradientWhiteToGold"></canvas>
 
-                                                <div class="subHeader">
+                                                <div class="content">
                                                         CSS:
                                                         <br>
                                                         <span id="gradientWhiteToGoldCSS">
@@ -224,7 +223,7 @@
                                         <div class="col-6">
                                                 <canvas class="gradientBlackToGold"></canvas>
 
-                                                <div class="subHeader">
+                                                <div class="content">
                                                         CSS:
                                                         <br>
                                                         <span id="gradientBlackToGoldCSS">
@@ -271,7 +270,7 @@
 
                                                 </canvas>
 
-                                                <div class="subHeader">
+                                                <div class="content">
                                                         Original code by:
                                                         <br>
                                                         <a href="https://codepen.io/nohoid/pen/kIfto" target="_blank">
