Removed some old code & tweaked overall page design & added some content

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,10 @@
 
         </title>
 
-        <link rel="stylesheet" type="text/css" href="../Fonts/stylesheet.css" />
+        <!-- <link rel="stylesheet" type="text/css" href="../Fonts/stylesheet.css" /> -->
+
+        <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
                 integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -55,8 +58,7 @@
                                         </a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link disabled" href="Portfolio.html"> <span
-                                                        class="glyphicon glyphicon-film"></span> Portfolio (coming
+                                        <a class="nav-link disabled" href="Portfolio.html">Portfolio (coming
                                                 soon..) </a>
                                 </li>
                                 <li class="nav-item">
@@ -91,13 +93,13 @@
                                         <li class="nav-item">
                                                 <a class="nav-link" target="_blank"
                                                         href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/">
-                                                        <span class="glyphicon glyphicon-film"></span> LinkedIn </a>
+                                                        LinkedIn </a>
 
                                         </li>
                                         <li class="nav-item">
                                                 <a class="nav-link" target="_blank"
                                                         href="https://github.com/Saeedo1998">
-                                                        <span class="glyphicon glyphicon-film"></span> GitHub </a>
+                                                        GitHub </a>
 
                                         </li>
                                 </ul>
@@ -133,30 +135,38 @@
 
                                 My name is Saeed Badghaish
                                 <br />
-                                <span class="subTitle">Full Stack Web Developer @ University of Jeddah
+                                <span class="subTitle">
+                                        Full Stack Web Developer @ University of Jeddah
+                                        <br>
+                                        <i class="fa fa-globe"></i>
+                                        &nbsp; Jeddah, Saudi Arabia
+
                                 </span>
+                                <br>
+                                <br>
+                                <a class="email" href="mailto:saeedo_98@hotmail.com">
+                                        <i class="fa fa-envelope"></i>
+                                        &nbsp; saeedo_98@hotmail.com
+                                </a>
                         </div>
                         <br>
                         <br>
                         <br>
-                        <div class="section">
+                        <div class="section about-section">
                                 <div class="header">About</div>
-                                <div class=subHeader>
-                                        I am a Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full Stack Web Development 
-                                        specialized in .NET C# Web Form Development. <br>
-                                        <span class="hidden">I'm working on MVC & .NET Core projects and learning Unity C# Game Development on my free time.
+                                <div class=content>
+                                        I am a Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
+                                        Stack Web Development
+                                        specialized in .NET C# Web App Development. <br>
+                                        <span class="hidden">I'm working on MVC & .NET Core projects and learning Unity
+                                                C# Game Development on my free time.
                                         </span>
                                 </div>
                         </div>
                         <br>
                         <hr>
                         <br>
-                        <div class="section">
-                                <div class="header">Resume PDF</div>
-                                <div class=subHeader>
-                                        <a target="_blank" href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">View</a>
-                                </div>
-                        </div>
+
                         <div class="hidden">
                                 <span class="content">
                                         I do Web Development (Programming & Design), and in my free time I do
@@ -165,24 +175,55 @@
                                         <br>
                                         <br>
                                 </span>
-                                <span class="subHeader">
+                                <span class="content">
                                         Some of my work:
                                 </span>
 
                         </div>
 
-                        <div class="about container-fluid hidden">
+                        <div class="section">
                                 <div class="text-left">
                                         <span class="header">Skills</span>
                                         <br />
 
-                                        <div class="subHeader">
+                                        <span class="subHeader">Web Development</span>
+                                        <br />
+                                        <div class="content">
                                                 <div class="oval">
-                                                        Web Development
+                                                        Responsive Design
                                                 </div>
                                                 <div class="oval">
-                                                        Programming
+                                                        Web Forms
                                                 </div>
+                                                <div class="oval">
+                                                        MVC
+                                                </div>
+                                                <div class="oval">
+                                                        Razor
+                                                </div>
+                                                <div class="oval">
+                                                        Blazor
+                                                </div>
+
+                                        </div>
+
+                                        <span class="subHeader">Database</span>
+                                        <br>
+                                        <div class="content">
+                                                <div class="oval">
+                                                        SQL
+                                                </div>
+                                                <div class="oval">
+                                                        Microsoft SQL Server Management Studio
+                                                </div>
+                                                <div class="oval">
+                                                        Oracle Database Express Edition
+                                                </div>
+                                        </div>
+
+                                        <span class="subHeader">Programming Languages</span>
+                                        <br>
+                                        <div class="content">
                                                 <div class="oval">
                                                         C#
                                                 </div>
@@ -192,16 +233,45 @@
                                                 <div class="oval">
                                                         JavaScript
                                                 </div>
-
                                         </div>
+
+                                </div>
+                        </div>
+                        <br>
+                        <hr>
+                        <br>
+                        <div class="section">
+                                <div class="header">Resume</div>
+                                <div class="content">
+                                        <!-- <a target="_blank"
+                                                href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">View
+                                        </a> -->
+
+                                        <a target="_blank"
+                                                href="https://media-exp1.licdn.com/dms/document/C4D2DAQEyV-cpH97qcg/profile-treasury-document-pdf-analyzed/0/1635963106768?e=1637870400&v=beta&t=FdSl6Sz2zvZdP9bxhBj6uQFgi8j0wwHvlGvBAiCrNpQ">
+                                                LinkedIn
+                                        </a>
+                                        <br>
+                                        <a target="_blank"
+                                                href="Files/Saeed Badghaish CV - Full Stack Web Developer.docx">
+                                                DOCX
+                                        </a>
+                                        <br>
+                                        <a target="_blank"
+                                                href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">
+                                                PDF
+                                        </a>
+
                                 </div>
                         </div>
                         <br>
                         <br>
                         <br>
+
+                        <div class="footer text-center">
+                                Saeed Badghaish © 2021
+                        </div>
                         <br>
-
-
 
                 </div>
         </div>
